assets/css/style.css
/* ... */
.about-image {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -o-object-fit: cover;
  object-fit: cover;
  height: 90%;
  -webkit-box-shadow: 0 0 8px 8px black inset;
  box-shadow: 0 0 8px 8px black inset;
  padding-top: 20px;
  padding-bottom: 20px;
}

.about-text {
  text-align: justify;
}

.about-text p {
  font-size: 0.9rem;
}

/************************************************************* Enquire Page*/

.enquire-page {
  color: #fafafa;
}

.enquire-heading {
  padding-top: 25px;
  padding-bottom: 5px;
  text-align: center;
  margin: 0;
}

.enquire-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -ms-flex: 1;
  /* How to fix Flex in IE 11 https://stackoverflow.com/questions/21600345/flexbox-and-internet-explorer-11-displayflex-in-html */
  flex: 1 0 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: auto;
  padding: 0;
}

.enquire-wrapper .row {
  margin: 0;
  padding-bottom: 5px;
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: flex-start;
  -ms-flex-pack: distribute;
  justify-content: space-around;
}

/************************************************************* Enquire Form*/

.enquire-form {
  margin-left: 20px;
  margin-right: 20px;
  overflow-x: hidden;
  overflow-y: auto;
}

fieldset {
  border: 2px #fafafa solid;
  padding-bottom: 10px;
  margin-bottom: 10px;
  border-bottom-color: rgba(228, 30, 30, 0.9);
  border-left-color: rgba(228, 30, 30, 0.9);
  border-radius: 8px;
}

fieldset legend {
  font-size: 0.8rem;
  margin-left: 20px;
  padding-left: 5px;
  padding-right: 5px;
  width: auto;
}

.form-group.row {
  margin-left: 10px;
  margin-right: 10px;
}

.form-control.form-control-sm {
  background: transparent;
  color: #fafafa;
  border-radius: 8px;
}

.form-check.form-check-inline,
.form-check .form-check-input {
  margin-right: 0;
}

/* Changing Placeholder Color */
/* https://www.w3schools.com/howto/howto_css_placeholder.asp */
.form-control.form-control-sm::-webkit-input-placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #fafafa;
  opacity: 0.5;
}
.form-control.form-control-sm::-moz-placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #fafafa;
  opacity: 0.5;
}
.form-control.form-control-sm:-ms-input-placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #fafafa;
  opacity: 0.5;
}
.form-control.form-control-sm::-ms-input-placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #fafafa;
  opacity: 0.5;
}
.form-control.form-control-sm::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #fafafa;
  opacity: 0.5;
}

textarea.form-control {
  min-width: 80%;
}

.submit-enquiry {
  text-align: center;
}

.submit-enquiry button {
  color: #fafafa;
  margin-bottom: 10px;
}

/* center-align the row of inputs vertically if text of label wraps onto second line  */
.enquire-form .form-group.row {
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.enquire-wrapper .package-details-section {
  text-align: center;
  width: 100%;
}

.primary-label {
  text-align: center;
  width: auto;
  font-weight: 600;
}

.sub-label {
  font-size: 0.9rem;
}

p.sub-label {
  padding-top: 10px;
  margin-bottom: 0;
}

.currency {
  padding-right: 5px;
}

/************************************************************* Price Table */

.price-table-heading {
  padding-top: 25px;
  padding-bottom: 5px;
  text-align: center;
  margin: 0;
  color: rgba(228, 30, 30, 0.9);
}

.sub-cell {
  display: block;
  text-align: center;
  color: rgba(228, 30, 30, 0.9);
  letter-spacing: 2px;
  font-weight: 600;
}

.table td,
.table th {
  vertical-align: middle;
  position: relative;
}

.table th {
  font-size: 1em;
}

.table tr th {
  border-top: none;
  border-bottom: none;
  color: #fafafa;
  padding: 8px;
}

.table tr td {
  border-top: none;
  color: rgba(228, 30, 30, 0.9);
  padding: 8px;
}

.table tr td i {
  color: #fafafa;
}

table a {
  text-decoration: none;
  color: #fafafa;
}

table a:hover {
  text-decoration: none;
  color: #fafafa;
}
/* 50% Cell border concept adapted from https://stackoverflow.com/questions/32265322/css-length-of-border-bottom */

.table tr td::after {
  content: " ";
  position: absolute;
  display: block;
  left: 25%;
  width: 50%;
  bottom: 0;
  border-bottom: 2px solid #fafafa;
}

.table tr th::after {
  content: " ";
  position: absolute;
  display: block;
  left: 25%;
  width: 50%;
  bottom: 0;
  border-bottom: 2px solid #fafafa;
}

/* Price Table Modal */

.price-table-modal {
  background: black;
  border: none;
  color: #fafafa;
}

.price-table-modal fieldset {
  padding-bottom: 0px;
}

.modal-content {
  border: none;
}

.price-table-modal .price-table-heading {
  padding-top: 10px;
}

.price-table-modal .table th {
  font-size: 1em;
}

.close-modal-button {
  margin: auto;
  font-weight: 700;
}

.modal-footer {
  border: none;
  padding-top: 0;
  display: block;
  width: 100%;
  text-align: center;

}

.modal-link {
  text-decoration: underline;
  -webkit-text-decoration-color: rgba(228, 30, 30, 0.9);
  text-decoration-color: rgba(228, 30, 30, 0.9);
  -webkit-text-decoration-style: wavy;
  text-decoration-style: wavy;
  color: #fafafa;
}

.modal-link:hover {
  text-decoration: underline;
  -webkit-text-decoration-color: rgba(228, 30, 30, 0.9);
  text-decoration-color: rgba(228, 30, 30, 0.9);
  -webkit-text-decoration-style: wavy;
  text-decoration-style: wavy;
  color: rgba(228, 30, 30, 0.9);
}

/* Thank You Modal */

.thank-you-modal {
  background: black;
  border: none;
  color: #fafafa;
}

.thank-you-heading {
  padding-top: 25px;
  padding-bottom: 5px;
  margin: 0;
  color: rgba(228, 30, 30, 0.9);
}
/* ... */

